--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ APP_URL=http://localhost/ltt
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=lautantirta
+DB_DATABASE=trma
 DB_USERNAME=root
 DB_PASSWORD=root
 
